syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.compliance;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/compliance/types";

message ProvisionalModel {
  int32 vid = 1; 
  int32 pid = 2; 
  uint32 software_version = 3; 
  string certification_type = 4; 
  bool value = 5; 
  
}

